--- a/pages/film.html
+++ b/pages/film.html
@@ -77,12 +77,12 @@ var _hmt = _hmt || [];
           <br>
 <!--文章主体-->	
 
-<center>
-         <a href="/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
+         <center>
+         <a href="pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
           </a>
-     <p> </p>
+     
 	      <p>Kodak ColorPlus200</p>	      
-	 <p> </p>
+	
 	
           <center/>
           
