--- a/pages/film.html
+++ b/pages/film.html
@@ -78,7 +78,7 @@ var _hmt = _hmt || [];
 <!--文章主体-->	
 
          <center>
-         <a href="pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
+         <a href="/pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
           </a>
      
 	      <p>Kodak ColorPlus200</p>	      
