--- a/pages/film.html
+++ b/pages/film.html
@@ -80,8 +80,11 @@ var _hmt = _hmt || [];
          <center>
          <a href="/pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
           </a>
-     
-	      <p>Kodak ColorPlus200</p>	      
+          <center/>
+		 
+	<center>
+	      
+		<p>Kodak ColorPlus200</p>	      
 	
 	
           <center/>
