--- a/pages/film.html
+++ b/pages/film.html
@@ -80,11 +80,14 @@ var _hmt = _hmt || [];
          <center>
          <a href="/pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
           </a>
-          <center/>
+		  <a href='/pages/photo/1st-roll.html'>Kodak ColorPlus200</a>
+		 
+		 
+          </center>
 		 
 	<center>
 	      
-		<p>Kodak ColorPlus200</p>	      
+		<p></p>	      
 	
 	
           <center/>
