--- a/pages/film.html
+++ b/pages/film.html
@@ -80,14 +80,14 @@ var _hmt = _hmt || [];
          <center>
          <a href="/pages/photo/1st-roll.html"> <img src="/pages/photo/images/film01/1st_roll.svg"  height="100" width="100"/>
           </a>
-		  <a href='/pages/photo/1st-roll.html'>Kodak ColorPlus200</a>
 		 
+		 	<p>   <a href='/pages/photo/1st-roll.html'>Kodak ColorPlus200</a> </p>	      
+	
 		 
           </center>
 		 
 	<center>
 	      
-		<p></p>	      
 	
 	
           <center/>
