--- a/pages/photo/1st-roll.html
+++ b/pages/photo/1st-roll.html
@@ -80,7 +80,7 @@
 			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll15.jpg" class="img-wrap"><img src="images/film01/1roll15.jpg" alt="img15" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll16.jpg" class="img-wrap"><img src="images/film01/9.jpg" alt="img16" />
+			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll16.jpg" class="img-wrap"><img src="images/film01/1roll16.jpg" alt="img16" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
 			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll17.jpg" class="img-wrap"><img src="images/film01/1roll17.jpg" alt="img17" />
