--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ var _hmt = _hmt || [];
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/css/default.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/blog.css" crossorigin="anonymous">
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="https://chaoxuprime.com/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss.xml">
   </head>
   <body>
     <header class="hide-on-print">
@@ -72,6 +72,31 @@ var _hmt = _hmt || [];
         <br>
             </br>
         
+	  <figure>
+	<div class="sad-mac"></div>
+	<figcaption>
+		<span class="sr-text">Error 404: Not Found</span>
+		<span class="e"></span>
+		<span class="r"></span>
+		<span class="r"></span>
+		<span class="o"></span>
+		<span class="r"></span>
+		<span class="_4"></span>
+		<span class="_0"></span>
+		<span class="_4"></span>
+		<span class="n"></span>
+		<span class="o"></span>
+		<span class="t"></span>
+		<span class="f"></span>
+		<span class="o"></span>
+		<span class="u"></span>
+		<span class="n"></span>
+		<span class="d"></span>
+	</figcaption>
+</figure>
+	  
+	  
+	  
         <center>
             <img src="https://tva1.sinaimg.cn/large/007S8ZIlgy1ge2bi6vtk2g30630a0ai0.gif" alt="dna.gif" title="dna.gif" />
               
