--- a/pages/blog.html
+++ b/pages/blog.html
@@ -122,7 +122,7 @@ var _hmt = _hmt || [];
 
     
 <tr>
-    <td><a href="https://mp.weixin.qq.com/s/7m3fcJ4fKb4GV2MieMgG0g"><cite>只愿彼此仍在眼前</cite></a></td>
+    <td><a href="https://mp.weixin.qq.com/s/7m3fcJ4fKb4GV2MieMgG0g" target="_blank"  ><cite>只愿彼此仍在眼前</cite></a></td>
     <td class="right"><time>2020-01-24</time></td>
 </tr>
 
