--- a/pages/tools.html
+++ b/pages/tools.html
@@ -65,32 +65,31 @@ var _hmt = _hmt || [];
 	
 	<p> </p>
 	
-<p><a href='https://www.google.cn/chrome/'>Google Chrome</a></p>
-	<p><a href='https://www.microsoft.com/zh-cn/edge/'>Microsoft Edge</a></p>
-<p><a href='https://office.qq.com/'>TIM</a></p>
+<p><a href='https://www.google.cn/chrome/' target="_blank" >Google Chrome</a></p>
+	<p><a href='https://www.microsoft.com/zh-cn/edge/' target="_blank" >Microsoft Edge</a></p>
+<p><a href='https://office.qq.com/' target="_blank" >TIM</a></p>
 	
-<p><a href='https://rickywang.lanzous.com/ibr0uud'>Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvzvg'>2016</a></p> 
+<p><a href='https://rickywang.lanzous.com/ibr0uud' target="_blank" >Office 2019</a> <a href='https://rickywang.lanzous.com/ibsvzvg' target="_blank" >2016</a></p> 
 	
-<p><a href='https://www.teamviewer.cn/cn/'>Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud'>Lite</a></p>
+<p><a href='https://www.teamviewer.cn/cn/' target="_blank" >Teamviewer</a> <a href='https://rickywang.lanzous.com/ibsjpud' target="_blank" >Lite</a></p>
 	
-<p><a href='https://www.foxitsoftware.cn/'>Foxit PDE Reader</a></p> 
+<p><a href='https://www.foxitsoftware.cn/' target="_blank" >Foxit PDE Reader</a></p> 
 	
-<p><a href='https://rickywang.lanzous.com/ibr5j9g'>7-Zip</a> </p>
+<p><a href='https://rickywang.lanzous.com/ibr5j9g' target="_blank" >7-Zip</a> </p>
 	
-<p><a href='https://sourl.cn/VvrRDf'>Internet Download Manager</a> </p>
+<p><a href='https://sourl.cn/VvrRDf' target="_blank" >Internet Download Manager</a> </p>
 	
-<p><a href='https://freefilesync.org/'>FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb'>Win</a> <a href='https://rickywang.lanzous.com/ibr5v0j'>Mac</a></p>
+<p><a href='https://freefilesync.org/' target="_blank" >FreeFileSync</a>  <a href='https://rickywang.lanzous.com/ibr5usb' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr5v0j' target="_blank" >Mac</a></p>
 
 <h3>Research software</h3>
 	<p> </p>
-<p><a href='https://github.com/leovan/SciHubEVA/releases'>ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg'>Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb'>Mac</a></p>
-<p><a href='http://www.eudic.net/v4/en/app/eudic/'>Eudic</a> </p>
-<p>Endnote X9.3.2 <a href='https://sourl.cn/i7YPGa'>Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>Mac</a></p> <p>Endnote 20 <a href='https://sourl.cn/7PpTvY'>Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e'>Mac</a></p>
-<p>GraphPad Prism <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a></p>
+<p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
+<p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
+<p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (National Science Library,  Chinese Academy of Sciences) </a> Endnote X9.3.2 <a href='https://sourl.cn/i7YPGa' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  Endnote 20 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
+<p>GraphPad Prism 8 <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a>GraphPad Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh'>Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a'>Mac</a></p>
+	
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>Win64</a></p>
-<p><a href='http://qr20.cn/C3Rcwa'>IBM SPSS Statistics 25.0/26.0</a> </p>
-<p><a href='http://qr20.cn/C3Rcwa'>MATLAB 19b</a> </p>	
-<p><a href='http://qr20.cn/CMWXwU'>OriginPro2020b</a> </p>
+	
 <p><a href='https://github.com/CJ-Chen/TBtools'>TBtools</a>  <a href='https://sourl.cn/vbxLjE'> Win</a>  <a href='https://sourl.cn/6YyVhT'>Mac</a></p>
 	
 	
