--- a/pages/tools.html
+++ b/pages/tools.html
@@ -86,11 +86,11 @@ var _hmt = _hmt || [];
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
 <p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> Endnote X9.3.2 <a href='https://sourl.cn/i7YPGa' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  Endnote 20 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
-<p>GraphPad Prism 8 <a href='https://rickywang.lanzous.com/ibr80qh'>Win</a> <a href='https://rickywang.lanzous.com/ibr83sh'>Mac</a>GraphPad Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh'>Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a'>Mac</a></p>
+<p>GraphPad Prism 8 <a href='https://rickywang.lanzous.com/ibr80qh' target="_blank">Win</a> <a href='https://rickywang.lanzous.com/ibr83sh' target="_blank" >Mac</a>GraphPad Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a' target="_blank" >Mac</a></p>
 	
-<p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf'>5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza'>Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg'>Win64</a></p>
+<p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf' target="_blank" >5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza' target="_blank" >Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg' target="_blank" >Win64</a></p>
 	
-<p><a href='https://github.com/CJ-Chen/TBtools'>TBtools</a>  <a href='https://sourl.cn/vbxLjE'> Win</a>  <a href='https://sourl.cn/6YyVhT'>Mac</a></p>
+<p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
 	
 	
 	
@@ -102,27 +102,27 @@ var _hmt = _hmt || [];
 <p>Adobe Photoshop 2020 SP <a href='https://sourl.cn/968qEW'>Win</a> <a href='https://sourl.cn/p4fHhb'>Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/2dRCBf'>Win</a> <a href='https://sourl.cn/YQXbD3'>Mac</a> </p>
 <p>Adobe Premiere 2020 SP <a href='https://sourl.cn/QzKiDj'>Win</a> <a href='/tools'>Mac</a> </p>
-<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/WjMfuG'>Mac</a> </p>
+<p>Pixelmator Pro 1.7 <a href='https://sourl.cn/WjMfuG' target="_blank" >Mac</a> </p>
 	
-<p><a href='https://rickywang.lanzous.com/ibrb79a'>amtemu.v0.9.2-painter</a></p>
+<p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
 	
 <h3>OpenWRT</h3>
 	
 	 <p> </p>
-<p><a href='https://rickywang.lanzous.com/ibr0wuf'>Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf'>With Docker</a></p>
+<p><a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Rpi 4B</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >Lite</a>  <a href='https://rickywang.lanzous.com/ibr0wuf' target="_blank" >With Docker</a></p>
 
 	<h3>VPN</h3>
 	  <p> </p>
 
 	 
-<p><a href='https://rsoftware.baklib.com/Software/811e'>Qv2ray</a></p>	
+<p><a href='https://rsoftware.baklib-free.com/Software/811e' target="_blank" >Qv2ray</a></p>	
 	<p> </p>  
 	
 	
 	
  
 	
-	<h1>Password ：9757</h1>
+	<h1>Password ：<a href='https://tva1.sinaimg.cn/large/008eGmZEgy1gmzy1fz1qtj30j40t044g.jpg' >click me</a></h1>
 <p> </p>  
 	
       </article>
