--- a/pages/tools.html
+++ b/pages/tools.html
@@ -85,7 +85,7 @@ var _hmt = _hmt || [];
 	<p> </p>
 <p><a href='https://github.com/leovan/SciHubEVA/releases' target="_blank" >ScihubEVA</a> <a href='https://rickywang.lanzous.com/ibr6llg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr6kcb' target="_blank" >Mac</a></p>
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
-<p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> Endnote X9.3.2 <a href='https://sourl.cn/i7YPGa' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  Endnote 20 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
+<p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> Endnote X9.3.2 <a href='https://sourl.cn/i7YPGa' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  / Endnote 20 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
 <p>GraphPad Prism 8 <a href='https://rickywang.lanzous.com/ibr80qh' target="_blank">Win</a> <a href='https://rickywang.lanzous.com/ibr83sh' target="_blank" >Mac</a>GraphPad Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a' target="_blank" >Mac</a></p>
 	
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf' target="_blank" >5.0</a> / 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza' target="_blank" >Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg' target="_blank" >Win64</a></p>
