--- a/pages/tools.html
+++ b/pages/tools.html
@@ -97,11 +97,12 @@ var _hmt = _hmt || [];
 <h3>Professional software</h3>
 	
 	<p> </p>
+	<h2><a href='https://sourl.cn/egiiGi' target="_blank" >Adobe</a></h2>
 	
-<p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/CeWXXF'>Win</a> <a href='https://sourl.cn/4ZZEGf'>Mac</a> </p>
-<p>Adobe Photoshop 2020 SP <a href='https://sourl.cn/968qEW'>Win</a> <a href='https://sourl.cn/p4fHhb'>Mac</a> </p>
+<p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/4vci9Q' target="_blank" >Win</a> <a href='https://sourl.cn/4ZZEGf'>Mac</a> </p>
+<p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb'>Mac</a> </p>
 <p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/2dRCBf'>Win</a> <a href='https://sourl.cn/YQXbD3'>Mac</a> </p>
-<p>Adobe Premiere 2020 SP <a href='https://sourl.cn/QzKiDj'>Win</a> <a href='/tools'>Mac</a> </p>
+<p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/WjMfuG' target="_blank" >Mac</a> </p>
 	
 <p><a href='https://rickywang.lanzous.com/ibrb79a' target="_blank" >amtemu.v0.9.2-painter</a></p>
