--- a/pages/tools.html
+++ b/pages/tools.html
@@ -101,9 +101,9 @@ var _hmt = _hmt || [];
 
 <p> </p>
 <p> <a href='https://sourl.cn/egiiGi' target="_blank" >Adobe</a></p>	
-<p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/4vci9Q' target="_blank" >Win</a> <a href='https://sourl.cn/4ZZEGf'>Mac</a> </p>
-<p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb'>Mac</a> </p>
-<p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/2dRCBf'>Win</a> <a href='https://sourl.cn/YQXbD3'>Mac</a> </p>
+<p>Adobe Acrobat DC 2019 <a href='https://sourl.cn/4vci9Q' target="_blank" >Win</a> <a href='https://sourl.cn/N6qNgh' target="_blank" >Mac</a> </p>
+<p>Adobe Photoshop 2021 SP <a href='https://sourl.cn/4mKPj5'target="_blank" >Win</a> <a href='https://sourl.cn/p4fHhb' target="_blank" >Mac</a> </p>
+<p>Adobe Illustrator 2020 SP <a href='https://sourl.cn/2dRCBf'>Win</a> <a href='https://onedrive.gimhoy.com/sharepoint/aHR0cHM6Ly91c3RzLW15LnNoYXJlcG9pbnQuY24vOnU6L2cvcGVyc29uYWwvMjY0M191c3RzX2VkdV9jbi9FWktFTENJWFE3RkduUllKVURvaHgyTUJhOTVtbFNNRUFHUzZlNDhMYTVGOTVBP2U9RlVKUXlW.zip' target="_blank" >Mac</a> </p>
 <p>Adobe Premiere 2021 SP <a href='https://sourl.cn/i8VDKw'target="_blank" >Win</a> <a href='/tools'>Mac</a> </p>
 <p>Pixelmator Pro 1.7 <a href='https://sourl.cn/WjMfuG' target="_blank" >Mac</a> </p>
 	
