--- a/pages/tools.html
+++ b/pages/tools.html
@@ -87,13 +87,13 @@ var _hmt = _hmt || [];
 <p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >Eudic</a> </p>
 <p> <a href='http://pre.las.ac.cn/endnote/endnote.jsp' target="_blank" >Endnote (NSL) </a> ｜  X9.3.2 <a href='https://sourl.cn/i7YPGa' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/ibr0p1e' target="_blank" >Mac</a>  // 2020 <a href='https://rickywang.lanzous.com/iAv0Mkeshrg' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/iIzqLkesh9i' target="_blank" >Mac</a></p>
 
-<p><a href='https://www.graphpad-prism.cn/' target="_blank">GraphPad Prism 8 </a> <a href='https://rickywang.lanzous.com/ibr80qh' target="_blank">Win</a> <a href='https://rickywang.lanzous.com/ibr83sh' target="_blank" >Mac</a> // GraphPad Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a' target="_blank" >Mac</a></p>
+<p><a href='https://www.graphpad-prism.cn/' target="_blank">GraphPad Prism 8 </a> <a href='https://rickywang.lanzous.com/ibr80qh' target="_blank">Win</a> <a href='https://rickywang.lanzous.com/ibr83sh' target="_blank" >Mac</a> // Prism 9 <a href='https://rickywang.lanzous.com/ixqxhktkpsh' target="_blank" >Win</a> <a href='https://rickywang.lanzous.com/idOVrktkp1a' target="_blank" >Mac</a></p>
 	
 <p>Primer Premier   <a href='https://rickywang.lanzous.com/ibrbguf' target="_blank" >5.0</a> // 6 .0 <a href='https://rickywang.lanzous.com/ibrbqza' target="_blank" >Win32</a>  <a href='https://rickywang.lanzous.com/ibrbsjg' target="_blank" >Win64</a></p>
 	
 <p><a href='https://github.com/CJ-Chen/TBtools' target="_blank" >TBtools</a>  <a href='https://sourl.cn/vbxLjE' target="_blank" > Win</a>  <a href='https://sourl.cn/6YyVhT' target="_blank" >Mac</a></p>
-	
-	
+
+<p><a href='http://www.eudic.net/v4/en/app/eudic/' target="_blank" >SPSS 25 </a> </p>
 	
 <h3>Professional software</h3>
 	
