--- a/pages/photo/1st-roll.html
+++ b/pages/photo/1st-roll.html
@@ -35,107 +35,107 @@
 		<div class="grid">
 			
 			
-			<div class="grid__item" data-size="1280x853"> <a href="images/film01/1roll01.jpg" class="img-wrap"><img src="images/film01/zip-1roll01.jpg" alt="img3" />
+			<div class="grid__item" data-size="1280x853"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll01.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll01.jpg" alt="img3" />
 				<div class="description description--grid">Vestigial</div>
 				</a> </div>
-			<div class="grid__item" data-size="958x1280"> <a href="images/film01/1roll32.jpg" class="img-wrap"><img src="images/film01/zip-1roll32.jpg" alt="img32" />
+			<div class="grid__item" data-size="958x1280"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll32.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll32.jpg" alt="img32" />
 				<div class="description description--grid">Demesne</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x853"> <a href="images/film01/1roll03.jpg" class="img-wrap"><img src="images/film01/zip-1roll03.jpg" alt="img3" />
+			<div class="grid__item" data-size="1280x853"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll03.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll03.jpg" alt="img3" />
 				<div class="description description--grid">Vestigial</div>
 				</a> </div>
-			<div class="grid__item" data-size="865x1280"> <a href="images/film01/1roll04.jpg" class="img-wrap"><img src="images/film01/zip-1roll04.jpg" alt="img4" />
+			<div class="grid__item" data-size="865x1280"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll04.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll04.jpg" alt="img4" />
 				<div class="description description--grid">Zephyr</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x1280"> <a href="images/film01/1roll05.jpg" class="img-wrap"><img src="images/film01/zip-1roll05.jpg" alt="img5" />
+			<div class="grid__item" data-size="1280x1280"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll05.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll05.jpg" alt="img5" />
 				<div class="description description--grid">Desideratum</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll06.jpg" class="img-wrap"><img src="images/film01/zip-1roll06.jpg" alt="img6" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll06.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll06.jpg" alt="img6" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll07.jpg" class="img-wrap"><img src="images/film01/zip-1roll07.jpg" alt="img7" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll07.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll07.jpg" alt="img7" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll08.jpg" class="img-wrap"><img src="images/film01/zip-1roll08.jpg" alt="img8" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll08.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll08.jpg" alt="img8" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll09.jpg" class="img-wrap"><img src="images/film01/zip-1roll09.jpg" alt="img9" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll09.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll09.jpg" alt="img9" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll10.jpg" class="img-wrap"><img src="images/film01/zip-1roll10.jpg" alt="img10" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll10.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll10.jpg" alt="img10" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll11.jpg" class="img-wrap"><img src="images/film01/zip-1roll11.jpg" alt="img11" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll11.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll11.jpg" alt="img11" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x853"> <a href="images/film01/1roll12.jpg" class="img-wrap"><img src="images/film01/zip-1roll12.jpg" alt="img12" />
+                        <div class="grid__item" data-size="1280x853"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll12.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll12.jpg" alt="img12" />
 				<div class="description description--grid">Vestigial</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll13.jpg" class="img-wrap"><img src="images/film01/zip-1roll13.jpg" alt="img13" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll13.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll13.jpg" alt="img13" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll14.jpg" class="img-wrap"><img src="images/film01/zip-1roll14.jpg" alt="img14" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll14.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll14.jpg" alt="img14" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll15.jpg" class="img-wrap"><img src="images/film01/zip-1roll15.jpg" alt="img15" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll15.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll15.jpg" alt="img15" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll16.jpg" class="img-wrap"><img src="images/film01/zip-1roll16.jpg" alt="img16" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll16.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll16.jpg" alt="img16" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll17.jpg" class="img-wrap"><img src="images/film01/zip-1roll17.jpg" alt="img17" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll17.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll17.jpg" alt="img17" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll18.jpg" class="img-wrap"><img src="images/film01/zip-1roll18.jpg" alt="img18" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll18.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll18.jpg" alt="img18" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll19.jpg" class="img-wrap"><img src="images/film01/zip-1roll19.jpg" alt="img19" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll19.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll19.jpg" alt="img19" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
                        
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll20.jpg" class="img-wrap"><img src="images/film01/zip-1roll20.jpg" alt="img20" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll20.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll20.jpg" alt="img20" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll21.jpg" class="img-wrap"><img src="images/film01/zip-1roll21.jpg" alt="img21" />
+                        <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll21.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll21.jpg" alt="img21" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll22.jpg" class="img-wrap"><img src="images/film01/zip-1roll22.jpg" alt="img22" />
+                        <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll22.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll22.jpg" alt="img22" />
+				<div class="description description--grid">Quixotic</div>
+	 			</a> </div>
+                       <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll23.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll23.jpg" alt="img23" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll23.jpg" class="img-wrap"><img src="images/film01/zip-1roll23.jpg" alt="img23" />
+                       <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll24.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll24.jpg" alt="img24" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll24.jpg" class="img-wrap"><img src="images/film01/zip-1roll24.jpg" alt="img24" />
+                       <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll25.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll25.jpg" alt="img25" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll25.jpg" class="img-wrap"><img src="images/film01/zip-1roll25.jpg" alt="img25" />
-				<div class="description description--grid">Quixotic</div>
-				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll26.jpg" class="img-wrap"><img src="images/film01/zip-1roll26.jpg" alt="img26" />
+                       <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll26.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll26.jpg" alt="img26" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
 
-			 <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll27.jpg" class="img-wrap"><img src="images/film01/zip-1roll27.jpg" alt="img27" />
+			 <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll27.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll27.jpg" alt="img27" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll28.jpg" class="img-wrap"><img src="images/film01/zip-1roll28.jpg" alt="img28" />
+                         <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll28.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll28.jpg" alt="img28" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll29.jpg" class="img-wrap"><img src="images/film01/zip-1roll29.jpg" alt="img29" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll29.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll29.jpg" alt="img29" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll30.jpg" class="img-wrap"><img src="images/film01/zip-1roll30.jpg" alt="img20" />
+                        <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll30.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll30.jpg" alt="img20" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
-            <div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll31.jpg" class="img-wrap"><img src="images/film01/zip-1roll02.jpg" alt="img31" />
-				<div class="description description--grid">Quixotic</div>
-				</a> </div>
-			
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll02.jpg" class="img-wrap"><img src="images/film01/zip-1roll31.jpg" alt="img02" />
+                        <div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll31.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll02.jpg" alt="img31" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
 			
-			<div class="grid__item" data-size="1280x850"> <a href="images/film01/1roll33.jpg" class="img-wrap"><img src="images/film01/zip-1roll33.jpg" alt="img33" />
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll02.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll31.jpg" alt="img02" />
+				<div class="description description--grid">Quixotic</div>
+				</a> </div>
+			
+			<div class="grid__item" data-size="1280x850"> <a href="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/1roll33.jpg" class="img-wrap"><img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/zip-1roll33.jpg" alt="img33" />
 				<div class="description description--grid">Quixotic</div>
 				</a> </div>
 			
