--- a/pages/filmpage/film-01roll.html
+++ b/pages/filmpage/film-01roll.html
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
           
           <br>
 <!--文章主体-->	
-   <iframe height="550px" src="https://biowr.gitee.io/pages/photo/1st-roll.html">
+   <iframe height="550px" src="/pages/photo/1st-roll.html">
 </iframe>
 	     
 		 
