--- a/pages/film.html
+++ b/pages/film.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
 <!--文章主体-->	
 
          <center>
-         <a href="/pages/filmpage/film-01roll.html"> <img src="/pages/photo/images/film01/film01-cover-1.svg"  />
+         <a href="/pages/filmpage/film-01roll.html"> <img src="https://cdn.jsdelivr.net/gh/biowr/biowr.github.io@master/pages/photo/images/film01/film01-cover-1.svg"  />
           </a>
 		 
 		 	     
