--- a/pages/filmpage/film-01roll.html
+++ b/pages/filmpage/film-01roll.html
@@ -17,6 +17,7 @@ var _hmt = _hmt || [];
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
+    <meta name="referrer" content="never">
     <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
     <meta property="og:title" content="Film 01 Roll">
     <meta property="og:type" content="article">
@@ -65,7 +66,7 @@ var _hmt = _hmt || [];
 	      
  <center>       
 
-<video width="92%" poster="https://tva1.sinaimg.cn/large/008eGmZEgy1gn5j4cxdb5j31hc0u0n4w.jpg" controls="controls">
+<video width="86%" poster="https://tva1.sinaimg.cn/large/008eGmZEgy1gn5j4cxdb5j31hc0u0n4w.jpg" controls="controls">
 
   <source src="https://sourl.cn/MH8Gcm" type="video/mp4" />
 
