--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@ var _hmt = _hmt || [];
      </a>
           </center>
             
-	  <iframe src="//player.bilibili.com/player.html?aid=586496773&bvid=BV1fz4y1m77j&cid=289804115&page=1" width="80%" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+	  <iframe src="//player.bilibili.com/player.html?aid=586496773&bvid=BV1fz4y1m77j&cid=289804115&page=1" width="80%"  allowfullscreen="true"> </iframe>
 	
 
 	  
