--- a/404.html
+++ b/404.html
@@ -91,9 +91,7 @@ var _hmt = _hmt || [];
      </a>
           </center>
             
-	  <iframe src="//player.bilibili.com/player.html?aid=586496773&bvid=BV1fz4y1m77j&cid=289804115&page=1" height="600"  allowfullscreen="true"> </iframe>
-	
-
+	 <iframe src="https://player.bilibili.com/player.html?cid=57016129&aid=586496773&page=1&as_wide=1&high_quality=1&danmaku=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 	  
         <br>
             </br>
