--- a/blog.html
+++ b/blog.html
@@ -179,11 +179,9 @@ var _hmt = _hmt || [];
     <td class="right"><time>2016-07-01</time></td>
 </tr>
       
-	
-	<iframe src="//player.bilibili.com/player.html?aid=586496773&bvid=BV1fz4y1m77j&cid=289804115&page=1" width="99%" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-	
-	
-      
+	<div class="aspect-ratio">
+<iframe src="https://player.bilibili.com/player.html?aid=586496773&cid=289804115&page=1&as_wide=1&&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+</div>
 
    
 
