--- a/blog.html
+++ b/blog.html
@@ -178,9 +178,9 @@ var _hmt = _hmt || [];
     <td><a href="https://sourl.cn/6kPtbG"><cite>微信公众号记录</cite></a></td>
     <td class="right"><time>2016-07-01</time></td>
 </tr>
-      
-	<div class="aspect-ratio">
-<iframe src="https://player.bilibili.com/player.html?aid=586496773&cid=289804115&page=1&as_wide=1&&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+     
+<div class="aspect-ratio">
+<iframe src="//player.bilibili.com/player.html?aid=586496773&cid=289804115&page=1&as_wide=1&high_quality=1&danmaku=0" allowfullscreen="allowfullscreen" width="100%" height="500" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
 </div>
 
    
