--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@ var _hmt = _hmt || [];
 </tr>
      
 <div class="aspect-ratio">
-<iframe src="//player.bilibili.com/player.html?aid=586496773&cid=289804115&page=1&as_wide=1&high_quality=1&danmaku=0" allowfullscreen="allowfullscreen" width="100%" height="480" scrolling="no" frameborder="0" ></iframe>
+<iframe src="//player.bilibili.com/player.html?aid=586496773&cid=289804115&page=1&as_wide=1&high_quality=1&danmaku=0" allowfullscreen="allowfullscreen"  scrolling="no" frameborder="0" ></iframe>
 </div>
 
    
