--- a/pages/filmpage/film-01roll.html
+++ b/pages/filmpage/film-01roll.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 	  	        <br /> <br /> 
 	    <center>
 	      
-	  <a href='https://www.bilibili.com/video/BV1fz4y1m77j'>Bilibili</a>	
+	  <a href='https://www.bilibili.com/video/BV1fz4y1m77j' target="_blank" > B站三连 </a>	
          
 	      </center>
 
