--- a/pages/photo/1st-roll.html
+++ b/pages/photo/1st-roll.html
@@ -23,6 +23,10 @@
 <meta name="msapplication-TileImage" content="assets/i/app-icon72x72@2x.png">
 <meta name="msapplication-TileColor" content="#0e90d2">
 <link rel="stylesheet" type="text/css" href="css/style1.css" />
+<style type="text/css">
+html::-webkit-scrollbar {display:none}
+</style>
+
 <script src="js/modernizr-custom.js"></script>
 
 	<!--[if IE]>
