--- a/404.html
+++ b/404.html
@@ -5,8 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="The Art Gallery Guardian">
-    <meta name="author" content="Chao Xu">
-    <meta name="google-site-verification" content="YE2oeW4OwVOPdVVfdpYIakOuD0A2Qo80W_sUbMJDGok">
+    <meta name="author" content="wangrui">
     <meta property="og:title" content="404">
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
@@ -74,12 +73,11 @@ var _hmt = _hmt || [];
           to go back to the homepage.
         </p>
 		
-		
-	
 	      </center>
         <br>
             </br>
             
+	    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/cn/album/in-my-life-arr-guitar/1434843367?i=1434843720"></iframe>
     
         <br>
             </br>
