--- a/blog.html
+++ b/blog.html
@@ -193,8 +193,8 @@ var _hmt = _hmt || [];
        
 		
 	        <br /> <br /> 
-   
-
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            <span id="busuanzi_container_site_pv">访问量<span id="busuanzi_value_site_pv"></span>次</span>
 </tbody></table> 
 
       </article>
