--- a/blog.html
+++ b/blog.html
@@ -74,10 +74,29 @@ var _hmt = _hmt || [];
         <br>
 <div>
     
-	
-	<div id='write'  class=''><h3><a name="c-index" class="md-header-anchor"></a><span>C-index</span></h3><figure><table><thead><tr><th style='text-align:center;' ><span>姓名</span></th><th style='text-align:center;' ><span>技能</span></th><th style='text-align:right;' ><span>排行</span></th></tr></thead><tbody><tr><td style='text-align:center;' ><span>刘备</span></td><td style='text-align:center;' ><span>哭</span></td><td style='text-align:right;' ><span>大哥</span></td></tr><tr><td style='text-align:center;' ><span>关羽</span></td><td style='text-align:center;' ><span>打</span></td><td style='text-align:right;' ><span>二哥</span></td></tr><tr><td style='text-align:center;' ><span>张飞</span></td><td style='text-align:center;' ><span>骂</span></td><td style='text-align:right;' ><span>三弟</span></td></tr></tbody></table></figure><p>&nbsp;</p></div>	
-	
-	
+<h3>C-index</h3>
+<figure><table>
+<thead>
+<tr><th style='text-align:center;' >姓名</th><th style='text-align:center;' >技能</th><th style='text-align:right;' >排行</th></tr></thead>
+<tbody><tr><td style='text-align:center;' >刘备</td><td style='text-align:center;' >哭</td><td style='text-align:right;' >大哥</td></tr><tr><td style='text-align:center;' >关羽</td><td style='text-align:center;' >打</td><td style='text-align:right;' >二哥</td></tr><tr><td style='text-align:center;' >张飞</td><td style='text-align:center;' >骂</td><td style='text-align:right;' >三弟</td></tr></tbody>
+</table></figure>
+<p><code>create database hero;</code></p>
+<pre><code>    function fun(){
+         echo &quot;这是一句非常牛逼的代码&quot;;
+    }
+    fun();
+</code></pre>
+<pre><code class='language-flow' lang='flow'>st=&gt;start: 开始
+op=&gt;operation: My Operation
+cond=&gt;condition: Yes or No?
+e=&gt;end
+st-&gt;op-&gt;cond
+cond(yes)-&gt;e
+cond(no)-&gt;op
+&amp;```
+
+</code></pre>
+<p>&nbsp;</p>
 	
     
 <p> </p>  
