--- a/pages/tools.html
+++ b/pages/tools.html
@@ -56,7 +56,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">Tools</h1>
+        <h1 id="article-title">🔧 Tools</h1>
         <br>
 <div>
     
