--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -5,12 +5,12 @@
     <meta name="description" content="The Art Gallery Guardian">
     <meta name="author" content="Rui Wang">
  <!--作者-->
-    <meta property="og:title" content="The Perks of Being a Wallflower">
+    <meta property="og:title" content="🎥 The Perks of Being a Wallflower">
  <!--页面标题-->
     <meta property="og:type" content="article">
     <meta property="og:site_name" content="The Art Gallery Guardian">
     <meta property="article:tag" content="Flim, life">
-    <title>The Perks of Being a Wallflower</title> 
+    <title>🎥 The Perks of Being a Wallflower</title> 
  <!--页面标题-->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
