--- a/pages/24fps.html
+++ b/pages/24fps.html
@@ -61,7 +61,7 @@ var _hmt = _hmt || [];
     <main>
 <!--文章标题-->
         <article>
-        <h1 id="article-title">The Perks of Being a Wallflower</h1>
+        <h1 id="article-title">🎥 The Perks of Being a Wallflower</h1>
         <br>
 <div>
 	
